# cxform-cmake

./: .gitignore  CMakeLists.txt  README.md
include/: cxform.h
src/: cxform-manual.c  main-cli.c  main.c
tests/: CMakeLists.txt  tester.c
